# pragma-trading-bot

./: .dockerignore  .gitignore  CLEANUP_PLAN.md  DAILY_REPORT_2025-10-12.md  Dockerfile  FINAL_STATUS.md  FINAL_SUMMARY.md  README.md  coverage.xml  create_github_issues.py  create_github_issues_fixed.py  create_hmm_v2_issues.py  create_new_hmm_chart.py  docker-compose.yml  final_validation_system.py  github_issues_hmm_v2.json  hmm_v2_issues.json  paper_trading_validation.py  production_alerting_system.py  production_infrastructure_setup.py  production_monitoring_system.py  production_strategy_standalone.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_adaptive_retraining.py  test_dynamic_smoothing.py  test_enhanced_labeling.py  test_hmm.py  test_log_returns.py  test_robust_scaling.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: backtest_config.example.json  backtest_config.json  dryrun_config.json  env.example  live_config.json  pair_list.json  pragma_config.example.json  production_config.json  test_config.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  EXECUTION_LAYER.md  GITHUB_ISSUES.md  HMM_IMPLEMENTATION_SUMMARY.md  HMM_RESEARCH_AND_FIXES.md  HMM_V2_IMPROVEMENTS.md  HMM_V2_ROLLBACK_STRATEGY.md  HMM_V2_TREND_PHASE_PLAN.md  IMPROVEMENTS.md  INTEGRATION_GUIDE.md  LIVE_TRADING_DEPLOYMENT_GUIDE.md  LIVE_TRADING_OPERATIONS_MANUAL.md  MARKET_REGIME_ANALYSIS.md  ML_PIPELINE.md  OVER_OPTIMIZATION_ANALYSIS.md  PERFORMANCE_METRICS.md  PHASE3_HISTORICAL_TESTING_FINAL_REPORT.md  PHASE3_IMPLEMENTATION_REPORT.md  PHASE4_PAPER_TRADING_VALIDATION_FINAL_REPORT.md  PHASE4_PRODUCTION_SETUP_REPORT.md  PHASE4_RISK_MANAGEMENT_REPORT.md  PROGRESS.md  PROJECT_CHARTER.md  PROJECT_COMPLETION_SUMMARY.md  REALISTIC_TARGETS.md  ROADMAP.md  ROOT_CAUSE_ANALYSIS.md  SAFETY_GUIDE.md  SCIENTIFIC_FRAMEWORK.md  SECURITY.md  SECURITY_AUDIT.md  STATISTICAL_ANALYSIS.md  TESTING_PROTOCOL.md  TROUBLESHOOTING.md  VALIDATION_GUIDE.md  VALIDATION_PROGRESS.md
examples/: freqtrade_integration_example.py  hmm_basic_usage.py
scripts/: 1_download_data.ps1  2_run_backtest.ps1  3_analyze_results.ps1  4_run_hyperopt.ps1  README.md  analyze_hmm.py  analyze_hmm_v2_deep.py  analyze_trend_phase.py  backup.py  create_issues.py  deploy.py  download_data.sh  emergency_stop.py  health_check.py  monitor.py  start_live.py  start_simulation.py  test_github_access.py  validate_config.py  validate_environment.py
src/: __init__.py
src/execution/: __init__.py  base.py  freqtrade_integration.py  live.py  (+1 more)
tests/: __init__.py
(+46 files in other folders)
